Feat(login.html): 로그인 페이지에 회원가입 버튼 생성

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -28,7 +28,10 @@
                     <label for="password">비밀번호</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="Password">
                 </div>
-                <button type="submit" class="btn btn-success clearfix pull-right">로그인</button>
+                <div class="btn-group clearfix" style="width:100%;">
+                    <a href="/users/join" class="btn btn-default pull-left">회원가입</a>
+                    <button type="submit" class="btn btn-success pull-right">로그인</button>
+                </div>
                 <div class="clearfix" />
             </form>
         </div>
