[BRIE] Step5-3 댓글 (#65)
* chore: 데이터파일 gitignore에 추가

* chore: 주석 추가

* feat: reply 엔티티 생성

* feat: replyform dto 생성

* feat: ReplyRepository 인터페이스 생성

* chore: 간단한 주석 처리

* refactor: 에러 세분화

* feat: ReplyService 클래스 생성

* feat: ReplyController 클래스 생성

* refactor: Board와 Reply 양방향 관계 설정
* Board 엔티티에 댓글 목록 저장할 필드 추가
* 양방향 관계 설정

* refactor: ReplyService에서 양방향 관계 설정

* Remove springcafe-db.mv.db from repository

* feat: 댓글 테스트 코드

* refactor: 간단한 오류 수정

* refactor: 댓글 수정 로직 구현

* refactor: 댓글 수정 html

* feat: 댓글 구현 테스트 작성

* refactor: 댓글 html 수정
* 댓글 수정 폼 인라인형식으로
* 로그인 사용자와 댓글 작성자가 같은 경우에만 삭제, 수정 버튼이 보임

* feat: Board 엔티티에 deleted 필드를 추가

* feat: Reply 엔티티에 deleted 필드를 추가

* refactor: Repository에 소프트 삭제된 게시글, 댓글 제외 메서드 추가

* refactor: 기존 삭제 메서드 soft 삭제로 변경

* refactor: 에러 수정
* 작성자 확인은 에러가 아님 -> 경고 팝업으로 수정

* refactor: 삭제된 게시글/댓글 조회할때 Optional.empty()를 반환
* 소프트 삭제 반영해서 서비스 수정 -> Optional.empty()를 반환
* 테스트 코드에서 필요

* refactor: UpdateUser dto로 분리

* fix: readme 수정

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -53,27 +53,59 @@
                         </div>
                     </article>
 
-                    <!-- 댓글 입력 폼 (기능 미구현 상태) -->
+                    <!-- 댓글  -->
                     <div class="qna-comment">
                         <div class="qna-comment-slipp">
-                            <p class="qna-comment-count"><strong>0</strong>개의 의견</p>
+                            <p class="qna-comment-count"><strong th:text="${#lists.size(activeReplies)}">0</strong>개의 의견</p>
                             <div class="qna-comment-slipp-articles">
-                                <!-- 댓글 리스트 들어올 자리 -->
-                            </div>
-
-                            <form class="submit-write" action="#" method="POST">
-                                <div class="form-group" style="padding:14px;">
-                                    <textarea class="form-control" placeholder="댓글을 입력하세요..."></textarea>
+                                <div th:each="reply : ${activeReplies}">
+                                    <article class="article">
+                                        <div class="article-header">
+                                            <div class="article-header-thumb">
+                                                <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
+                                            </div>
+                                            <div class="article-header-text">
+                                                <span class="article-author-name" th:text="${reply.writer.name}">작성자</span>
+                                            </div>
+                                        </div>
+                                        <div class="article-doc comment-doc">
+                                            <p th:text="${reply.content}">댓글 내용</p>
+                                        </div>
+                                        <div class="article-util">
+                                            <ul class="article-util-list" th:if="${reply.writer.id == session.user.id}">
+                                                <li>
+                                                    <a href="#" class="link-modify-article"
+                                                       th:attr="data-reply-id=${reply.id}, data-board-id=${board.boardId}"
+                                                       onclick="showEditForm(this); return false;">수정</a>
+                                                </li>
+                                                <li>
+                                                    <form class="delete-answer-form" th:action="@{/boards/{boardId}/replies/{replyId}(boardId=${board.boardId},replyId=${reply.id})}" method="POST">
+                                                        <input type="hidden" name="_method" value="DELETE">
+                                                        <button type="submit" class="delete-answer-button">삭제</button>
+                                                    </form>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </article>
                                 </div>
-                                <button class="btn btn-success pull-right" type="button">댓글 작성</button>
-                                <div class="clearfix"></div>
-                            </form>
+
+                                <!-- 댓글 입력 폼 (새 댓글 추가) -->
+                                <form class="submit-write" th:action="@{/boards/{boardId}/replies(boardId=${board.boardId})}" method="post">
+                                    <div class="form-group" style="padding:14px;">
+                                        <!-- name을 content로 변경 -->
+                                        <textarea class="form-control" name="content" placeholder="댓글을 입력하세요" required></textarea>
+                                    </div>
+                                    <button class="btn btn-success pull-right" type="submit">답변하기</button>
+                                    <div class="clearfix"></div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <script type="text/template" id="answerTemplate">
         <article class="article">
@@ -90,21 +122,44 @@
                 {2}
             </div>
             <div class="article-util">
-            <ul class="article-util-list">
-                <li>
-                    <a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
-                </li>
-                <li>
-                    <form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
-                        <input type="hidden" name="_method" value="DELETE">
-                         <button type="submit" class="delete-answer-button">삭제</button>
-                    </form>
-                </li>
-            </ul>
+                <ul class="article-util-list">
+                    <li>
+                        <a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
+                    </li>
+                    <li>
+                        <form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
+                            <input type="hidden" name="_method" value="DELETE">
+                            <button type="submit" class="delete-answer-button">삭제</button>
+                        </form>
+                    </li>
+                </ul>
             </div>
         </article>
     </script>
 
+    <!-- 인라인 수정 폼 템플릿: 만약 JS로 동적으로 처리하지 않으면, 별도의 템플릿 없이 JS를 이용 -->
+    <script>
+        function showEditForm(button) {
+            // 버튼의 data 속성에서 replyId와 boardId 추출
+            const replyId = button.getAttribute("data-reply-id");
+            const boardId = button.getAttribute("data-board-id");
+            // 댓글 article 요소를 찾고, 그 안의 .article-doc 영역을 선택
+            const articleElem = button.closest(".article");
+            const contentText = articleElem.querySelector(".article-doc p").innerText;
+
+            // 수정 폼 HTML 구성 (PUT 요청으로 전송)
+            const formHTML = `
+            <form method="post" action="/boards/${boardId}/replies/${replyId}/edit">
+                <input type="hidden" name="_method" value="PUT" />
+                <textarea name="content" class="form-control" required>${contentText}</textarea>
+                <button type="submit" class="btn btn-primary btn-sm">수정 완료</button>
+                <button type="button" class="btn btn-secondary btn-sm" onclick="location.reload();">취소</button>
+            </form>
+        `;
+            // 댓글의 article-doc 영역을 수정 폼으로 대체
+            articleElem.querySelector(".article-doc").innerHTML = formHTML;
+        }
+    </script>
     <!-- script references -->
     <th:block th:replace="~{layout/footer :: footer}"></th:block>
 </body>
